--- a/public/index.html
+++ b/public/index.html
@@ -29,8 +29,8 @@
     <title>Portfolio</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body class="light-theme"> 
+        <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div class="container">
       
