--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     />
     <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
     <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
-    <title>Portfolio</title>
+    <title>Pranjal SIngh</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body class="light-theme"> 
