--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <title>Pranjal Singh</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </head>
-  <body class="light-theme"> 
+  <body class="dark-theme"> 
         <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <div class="container">
